# UtahMSD-Fall2022

./: .gitignore  README.md
Aug22/HelloWorld/: .gitignore
BitManipulation/BitManipulation/: bits.cpp
BitManipulation/BitManipulation.xcodeproj/: project.pbxproj
CS6010/: PointerPrac.cpp  README.md
CS6010/Day11/: binary_hex_lab.txt
CS6010/Day2/: README.md
CS6010/Day3/: README.md
CS6010/Day5/: README.md
CS6010/Day6/: README.md
CS6010/DrawAnythingWithSFML/: CMakeLists.txt
CS6010/FinalProject/: CMakeLists.txt
CS6011/: README.md
CS6011/JavaScriptPractive/: practice.html  practice.js
CS6012/: README.md
CS6012/Assignment1/: assignment1.properties
CS6012/Assignment2/: assignment2.properties
CS6012/Assignment3/: Analysis.pages  assignment3.properties
CS6012/Assignment4/: Jinyi_Zhou_analysis-doc.pages
CS6012/Lab01/: Lab 1 Worksheet.txt
CS6012/Lab02/: worksheet Jinyi Zhou.rtf
CS6012/Lab04/: worksheet.rtf
CS6012/Notes/: Chapter1.md  README.md
CS6013/Assembly_Programming/: CMakeLists.txt  a.out  main.cpp  myAsm.s  mySyscallProgram
CS6013/DisassemblyLab/: mainO0.s  mainO1.s  step1.txt  step2.txt
CS6013/Malloc_replacement/: CMakeLists.txt  Hash.cpp  Hash.h  Malloc.cpp  Malloc.h  main.cpp
CS6013/Own_UNIX_Shell/: CMakeLists.txt
CS6013/Parallel_Reductions/: CMakeLists.txt  Makefile  main.cpp
CS6015/lab2/: CMakeLists.txt  Department.cpp  JinyiZhou.txt  employeeClass.cpp  main.cpp  program  program_new
CS6015/lab2/program_new.dSYM/Contents/Resources/DWARF/: program_new
CS6016/: lab1.md
Day2/: README
Day4/: README.MD
(+266 files in other folders)
